<resources>
    <string name="app_name">LabAssignment</string>
    <string name="offer_text">Your Offer is being processed</string>
    <string name="make_offer_text">Please check notification periodically to see if your offer was acceptedor rejected by the seller</string>
    <string name="back_text">Back to Home</string>
    <string name="rejected_text">We are sorry, your offer has been rejected</string>
    <string name="worry_text">Dont worry, you will always be able to make another offer that is more suitable, so that your offer is accepted</string>
    <string name="offer_again">Make an Offer Again</string>
    <string name="offer_accepted">Your offer has been accepted by the seller for $170,000</string>
    <string name="Procced">Procced to Checkout</string>
    <string name="Congrats">Congrats! Your offer has been accepted!</string>
    <string name="Shipping">Shipping Address</string>
    <string name="todo">TODO</string>
    <string name="product_name">Product Name</string>
    <string name="distance">1.3 KM</string>
    <string name="rating">4.4</string>
    <string name="price">Rs. 1000</string>
    <string name="favourite">Favourite</string>
    <string name="Order">Order</string>
    <string name="car_names">BMW M5 Series</string>
    <string name="car_color">Silver</string>
    <string name="amount">$170,000</string>
    <string name="choose_shipping">Choose Shipping </string>
    <string name="choose">Choose Shipping Type </string>
    <string name="amounts">Amount</string>
    <string name="Shippings">Shipping</string>
    <string name="Shippings_amount">-</string>
    <string name="Tax">Tax</string>
    <string name="Tax_amount">$1000</string>
    <string name="Total">Total</string>
    <string name="Total_amount">-</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="office_address">6993 Meadow Valley Terra PC 3637</string>
    <string name="apartment">Apartment</string>
    <string name="apartment_address">21833 Clyde Gallagher, PC 4662</string>
    <string name="house">Parent House</string>
    <string name="house_address">5259 Blue Bill Park, PC 4627</string>
    <string name="new_address">Add New Address</string>
    <string name="choose_shipping_address">Choose Shipping</string>

    <string name="truck">Truck</string>
    <string name="truck_text">$200</string>
    <string name="truck_address">Est. Arrival, Dec 20-23</string>

    <string name="train">Train</string>
    <string name="train_text">$250</string>
    <string name="train_address">Est. Arrival, Dec 20-22</string>

    <string name="container">Container Ship</string>
    <string name="container_text">$300</string>
    <string name="container_address">Est. Arrival, Dec 19-20</string>

    <string name="Plane">Plane</string>
    <string name="Plane_text">$400</string>
    <string name="Plane_address">Est. Arrival, Dec 18-19</string>


    <string name="amount_ship">$250</string>
    <string name="amount_total">$171,250</string>
    <string name="total_amount">$Total Amount</string>

    <string name="payment">Select the payment method you want to use</string>
    <string name="wallet">My Wallet</string>
    <string name="wallet_amount">$299,677</string>
    <string name="paypal">PayPal</string>
    <string name="google">Google</string>
    <string name="Apple">Apple Pay</string>
    <string name="master">.... .... .... .... 4679</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="review">change</string>
    <string name="review_summary">Review</string>
    <string name="pin">Enter your PIN to confirm payment</string>
    <string name="pin_continue">Continue</string>


</resources>