<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseShipping"
    android:orientation="vertical">

    <!--    Home   -->

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">




                />

            <TextView
                android:id="@+id/title"
                android:layout_marginStart="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truck"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_below="@id/title"

                android:layout_marginStart="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truck_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/clip_path_group"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:width="40sp"
                android:text="@string/truck_text"
                android:textStyle="bold"
                />



        </RelativeLayout>
    </androidx.cardview.widget.CardView>



    <!--    Office   -->


    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">



            <TextView
                android:id="@+id/title_office"
                android:layout_marginStart="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/subtitle_office"
                android:layout_below="@id/title_office"
                android:layout_marginStart="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <ImageView
                android:id="@+id/edit_icon_office"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/clip_path_group"

                />

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="14dp"
                android:layout_marginRight="9dp"
                android:src="@drawable/black_circle_fill"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:width="40sp"
                android:text="@string/train_text"
                android:textStyle="bold"
                />



        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <!--    Apartment  -->

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">



                />

            <TextView
                android:id="@+id/title_apartment"
                android:layout_marginStart="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/container"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/subtitle_apartment"
                android:layout_below="@id/title_apartment"

                android:layout_marginStart="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/container_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <ImageView
                android:id="@+id/edit_icon_apartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/clip_path_group"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:width="40sp"
                android:text="@string/container_text"
                android:textStyle="bold"
                />



        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <!--   Parent House's   -->



    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <TextView
                android:id="@+id/title_house"
                android:layout_marginStart="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Plane"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/subtitle_house"
                android:layout_below="@id/title_house"

                android:layout_marginStart="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Plane_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <ImageView
                android:id="@+id/edit_icon_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/clip_path_group"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:width="40sp"
                android:text="@string/Plane_text"
                android:textStyle="bold"
                />



        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_shipping_address"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#101010"
        />

</LinearLayout>