<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfferAccepted"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="190dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/offeraccepted" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Congrats"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="35sp"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offer_accepted"

        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        />
    <Button
        android:id="@+id/btnOfferAccepted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Procced"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#101010"
        />



</LinearLayout>